---
title: Account Management System
---
erDiagram
    Persons {
        INT PersonID PK
        NVARCHAR(30) NationalNumber
        INT FullNameID FK
        DATE DateOfBirth
        NVARCHAR(200) Address
        INT ContactInformationID FK
        TINYINT CountryID FK
        NVARCHAR(2083) ImageURL
    }
    FullNames {
        INT FullNameID PK
        NVARCHAR(20) FirstName
        NVARCHAR(20) SecondName
        NVARCHAR(20) ThirdName
        NVARCHAR(20) FourthName
    }
    Countries {
        TINYINT CountryID PK
        NVARCHAR(60) CountryName
        VARCHAR(3) CountryCode
    }
    MobileNumber {
        INT MobileNumberID PK
        VARCHAR(20) ContactNumber
        TINYINT CountryID FK
    }
    ContactInformation {
        INT ContactInformationID PK
        INT MobileNumberID FK
        VARCHAR(40) Email
    }
    AccountTypes {
        TINYINT AccountTypeID PK
        NVARCHAR(25) AccountTypeName
    }
    Accounts {
        INT AccountID PK
        INT PersonID FK
        VARCHAR(30) Username
        VARCHAR(30) Password
        BIT IsActive
        TINYINT AccountTypeID FK
    }
    AccountPermissions {
        INT AccountID FK
        TINYINT PermissionID FK
    }
    Permissions {
        TINYINT PermissionID PK
        NVARCHAR(40) PermissionName
    }

    Persons ||--|| FullNames: ""
    Persons ||--|| Countries: ""
    Persons ||--|| ContactInformation: ""
    Persons ||--o{ Accounts: ""
    Accounts ||--|| AccountTypes: ""
    Accounts }|--o{ AccountPermissions: ""
    AccountPermissions }o--|| Permissions: ""